--- a/index.html
+++ b/index.html
@@ -50,7 +50,24 @@
     </div>
 
     <div class="hero">
+      <div class="hero-info">
+        <h1 class="title">Game on!</h1>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et reprehenderit tempore ipsa rem ut quod odit nemo eos, quo dicta. Ducimus, voluptate.
+        </p>
+        <a href="#" class="btn uppercase">
+          read more
+          <i></i>
+        </a>
+      </div>
+    </div>
 
+    <!-- Style these absolute -->
+    <a href="#" class="next"></a>
+    <div class="hero-slider-btns">
+      <!-- numbered links -->
+      <a href="#" class="slider-btns"></a>
+      <a href="#" class="slider-btns"></a>
     </div>
   </header>
   
