--- a/index.html
+++ b/index.html
@@ -4,19 +4,39 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/main.min.css">
   <!-- fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <!-- Icons -->
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+  <!-- css -->
+   <link rel="stylesheet" href="./css/main.min.css">
   <title>EndGame Gaming Blog - Mockup</title>
 </head>
 <body>
   <header class="header">
     <div class="container">
+
       <div class="header-social-links">
-        <!-- TODO: anchor tags absolute left-->
+        <p>Follow us:</p>
+        <a href="" class="social-link-item">
+          <i class="ri-pinterest-line"></i>
+        </a>
+        <a href="" class="social-link-item">
+          <i class="ri-facebook-fill"></i>
+        </a>
+        <a href="" class="social-link-item">
+          <i class="ri-twitter-fill"></i>
+        </a>
+        <a href="" class="social-link-item">
+          <i class="ri-dribbble-line"></i>
+        </a>
+        <a href="" class="social-link-item">
+          <i class="ri-behance-fill"></i>
+        </a>
       </div>
+
       <nav class="navbar">
         <div class="navbar-logo">
           <!-- TODO: insert logo -->
