--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="header-social-links">
         <p>Follow us:</p>
         <a href="" class="social-link-item">
-          <i class="ri-pinterest-line"></i>
+          <i class="ri-pinterest-fill"></i>
         </a>
         <a href="" class="social-link-item">
           <i class="ri-facebook-fill"></i>
@@ -39,9 +39,9 @@
 
       <nav class="navbar">
         <div class="navbar-logo">
-          <!-- TODO: insert logo -->
+          <h1 class="logo"><span class="accent">On</span>Game</h1>
         </div>
-        <ul class="header-navbar-links">
+        <ul class="navbar-links">
           <!-- TODO: a tags arrow images " Hide on mobile"-->
           <li class="link-item"></li>
           <li class="link-item"></li>
@@ -49,14 +49,18 @@
           <li class="link-item"></li>
           <li class="link-item"></li>
         </ul>
-        <div class="login">
-          <!-- TODO: anchor tags -->
+        <div class="navbar-login">
+          <a href="#" class="logReg">Login</a>
+          /
+          <a href="#" class="logReg">Register</a>
         </div>
       </nav>
       <div class="header-dropdown-nav">
         <!-- TODO: Hide on desk, show only for mobile -->
         <div class="open-menu-link">
           <!-- TODO: image & text | absolute top left -->
+          <p>menu</p>
+          <i class="ri-menu-line ri-2x"></i>
         </div>
         <ul class="header-dropdown-nav-links">
           <!-- TODO: a tags arrow images " Hide on mobile"-->
@@ -67,18 +71,18 @@
           <li class="link-item"></li>
         </ul>
       </div>
-    </div>
 
-    <div class="hero">
-      <div class="hero-info">
-        <h1 class="title">Game on!</h1>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et reprehenderit tempore ipsa rem ut quod odit nemo eos, quo dicta. Ducimus, voluptate.
-        </p>
-        <a href="#" class="btn uppercase">
-          read more
-          <i></i>
-        </a>
+      <div class="hero">
+        <div class="hero-info">
+          <h1 class="title">Game on!</h1>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et reprehenderit tempore ipsa rem ut quod odit nemo eos, quo dicta. Ducimus, voluptate.
+          </p>
+          <a href="#" class="btn uppercase">
+            read more
+            <i></i>
+          </a>
+        </div>
       </div>
     </div>
 
