--- a/index.html
+++ b/index.html
@@ -56,22 +56,41 @@
         </div>
       </nav>
 
-      <!-- TODO: Redo this structure. -->
       <div class="header-dropdown">
         <!-- TODO: Hide on desk, show only for mobile -->
-        <div class="open-menu-link" id="menu-btn">
-          <!-- TODO: image & text | absolute top left -->
+        <div class="open-menu-btn" id="menu-btn">
           <p>menu</p>
           <i class="ri-menu-line ri-2x"></i>
         </div>
         <div class="header-dropdown-container">
           <ul class="header-dropdown-links" id="drop-down-menu">
             <!-- TODO: a tags arrow images " Hide on mobile"-->
-            <li class="link-item">Home</li>
-            <li class="link-item">Games</li>
-            <li class="link-item">Reviews</li>
-            <li class="link-item">News</li>
-            <li class="link-item">Contact</li>
+            <li class="link-item">
+              <a href="#">
+                Home
+              </a>
+            </li>
+            <li class="link-item">
+              <a href="#">
+                Games
+              </a>
+              <i class="ri-arrow-down-s-line ri-2x"></i>
+            </li>
+            <li class="link-item">
+              <a href="#">
+                Reviews
+              </a>
+            </li>
+            <li class="link-item">
+              <a href="#">
+                News
+              </a>
+            </li>
+            <li class="link-item">
+              <a href="#">
+                Contact
+              </a>
+            </li>
           </ul>
         </div>
       </div>
