mobile menu toggle transition

--- a/index.html
+++ b/index.html
@@ -57,14 +57,12 @@
       </nav>
 
       <div class="header-dropdown">
-        <!-- TODO: Hide on desk, show only for mobile -->
         <div class="open-menu-btn" id="menu-btn">
           <p>menu</p>
           <i class="ri-menu-line ri-2x"></i>
         </div>
-        <div class="header-dropdown-container">
-          <ul class="header-dropdown-links" id="drop-down-menu">
-            <!-- TODO: a tags arrow images " Hide on mobile"-->
+        <div class="header-dropdown-container" id="drop-down-container">
+          <ul class="header-dropdown-links" id="drop-down-links">
             <li class="link-item">
               <a href="#">
                 Home
@@ -73,8 +71,8 @@
             <li class="link-item">
               <a href="#">
                 Games
+                <i class="ri-arrow-down-s-line ri-2x"></i>
               </a>
-              <i class="ri-arrow-down-s-line ri-2x"></i>
             </li>
             <li class="link-item">
               <a href="#">
