--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <div class="header-dropdown">
         <div class="open-menu-btn" id="menu-btn">
-          <p>menu</p>
+          <span>menu</span>
           <i class="ri-menu-line ri-2x"></i>
         </div>
         <div class="header-dropdown-container" id="drop-down-container">
@@ -99,9 +99,11 @@
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et reprehenderit tempore ipsa rem ut quod odit nemo eos, quo dicta. Ducimus, voluptate.
           </p>
-          <a href="#" class="btn uppercase">
-            read more
-            <i></i>
+          <a href="#" class="main-rect-btn uppercase">
+            <span>
+              read more
+            </span>
+            <i class="ri-arrow-right-s-line ri-3x accent"></i>
           </a>
         </div>
       </div>
