hero btn styling

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
               read more
             </span>
             <i class="ri-arrow-right-s-line ri-3x accent"></i>
+            <i class="ri-arrow-right-s-line ri-3x accent"></i>
           </a>
         </div>
       </div>
