circle btns created

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
       <nav class="navbar">
         <div class="navbar-logo">
-          <h1 class="logo"><span class="accent">On</span>Game</h1>
+          <h1 class="logo"><span class="accent">On</span>Arcade</h1>
         </div>
         <ul class="navbar-links">
           <!-- TODO: a tags arrow images " Hide on mobile"-->
@@ -95,7 +95,7 @@
 
       <div class="hero">
         <div class="hero-info">
-          <h1 class="title">Game on!</h1>
+          <h1 class="title">Arcade on!</h1>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et reprehenderit tempore ipsa rem ut quod odit nemo eos, quo dicta. Ducimus, voluptate.
           </p>
@@ -111,11 +111,14 @@
     </div>
 
     <!-- Style these absolute -->
-    <a href="#" class="next"></a>
-    <div class="hero-slider-btns">
-      <!-- numbered links -->
-      <a href="#" class="slider-btns"></a>
-      <a href="#" class="slider-btns"></a>
+    <div class="slider-btns-container">
+      <div class="circle-btns-container" id="circle-btns">
+        <!-- numbered links -->
+        <a href="#" class="circle-btn">01.</a>
+        <a href="#" class="circle-btn">02.</a>
+      </div>
+      
+      <a href="#" class="next"></a>
     </div>
   </header>
   
