toggle active number button

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
         <!-- numbered links -->
         <a href="#" class="circle-btn">01.</a>
         <a href="#" class="circle-btn">02.</a>
+        <a href="#" class="circle-btn">03.</a>
       </div>
       
       <a href="#" class="next"></a>
