--- a/index.html
+++ b/index.html
@@ -42,12 +42,36 @@
           <h1 class="logo">Gaming<span class="accent">Edge</span></h1>
         </div>
         <ul class="navbar-links">
-          <!-- TODO: a tags arrow images " Hide on mobile"-->
-          <li class="link-item"></li>
-          <li class="link-item"></li>
-          <li class="link-item"></li>
-          <li class="link-item"></li>
-          <li class="link-item"></li>
+          <li class="link-item">
+            <a href="#">
+              Home
+              <i class="ri-arrow-down-s-line ri-2x"></i>
+            </a>
+          </li>
+          <li class="link-item">
+            <a href="#">
+              Games
+              <i class="ri-arrow-down-s-line ri-2x"></i>
+            </a>
+          </li>
+          <li class="link-item">
+            <a href="#">
+              Reviews
+              <i class="ri-arrow-down-s-line ri-2x"></i>
+            </a>
+          </li>
+          <li class="link-item">
+            <a href="#">
+              News
+              <i class="ri-arrow-down-s-line ri-2x"></i>
+            </a>
+          </li>
+          <li class="link-item">
+            <a href="#">
+              Contact
+              <i class="ri-arrow-down-s-line ri-2x"></i>
+            </a>
+          </li>
         </ul>
         <div class="navbar-login">
           <a href="#" class="logReg">Login</a>
