slide code cleanup

--- a/index.html
+++ b/index.html
@@ -118,28 +118,16 @@
       </div>
 
       <div class="hero" id="hero">
-        <!-- <div class="hero-info">
-          <h1 class="title" id="main-title">Arcade on!</h1>
-          <p class="desc-block" id="main-desc">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et reprehenderit tempore ipsa rem ut quod odit nemo eos, quo dicta. Ducimus, voluptate.
-          </p>
-          <a href="#" class="main-rect-btn uppercase" id="main-btn">
-            <span>
-              read more
-            </span>
-            <i class="ri-arrow-right-s-line ri-3x accent"></i>
-            <i class="ri-arrow-right-s-line ri-3x accent"></i>
-          </a>
-        </div> -->
+        <!-- in JS -->
       </div>
       
       <!-- Style these absolute -->
       <div class="slider-btns-container">
         <div class="circle-btns-container" id="circle-btns">
           <!-- numbered links -->
-          <a href="#" class="circle-btn active-btn">01.</a>
-          <a href="#" class="circle-btn">02.</a>
-          <a href="#" class="circle-btn">03.</a>
+          <a href="#" class="circle-btn active-btn" id="1">01.</a>
+          <a href="#" class="circle-btn" id="2">02.</a>
+          <a href="#" class="circle-btn" id="3">03.</a>
         </div>
         
       </div>
